.provarCaches/00D5f000005vwGkEAI/objects/rstk__sydatad__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_sydatad</customHelpPage>
    <description>sydatad__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_amount__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_apentryprice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>AP Entry Price (Maint Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_apentryqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>AP Entry Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_apunitprice__c</fullName>
        <label>sydatad_apunitprice (Internal Use)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_cstids__c</fullName>
        <inlineHelpText>NA</inlineHelpText>
        <label>Cst IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_dim1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dimension Value 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_dim2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dimension Value 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_dim3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dimension Value 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_glacctid__c</fullName>
        <label>sydatad_glacctid (Internal Use)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_invqty__c</fullName>
        <label>sydatad_invqty (Internal Use)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_invunitprice__c</fullName>
        <label>sydatad_invunitprice (Internal Use)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_lotno__c</fullName>
        <inlineHelpText>When processing an RMA via SYDATA for a Kit that has Lot Controlled components, this field contains the lot number for the specified component item.</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_message__c</fullName>
        <inlineHelpText>When necessary, this field contains details of an error that has occurred during processing.</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries the project associated with this Invoice Line</inlineHelpText>
        <label>Project Master</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>System Transaction Object Details</relationshipLabel>
        <relationshipName>sydatads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_pjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries the Project Charge (Job) Code associated with this Invoice Line</inlineHelpText>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>System Transaction Object Details</relationshipLabel>
        <relationshipName>sydatads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_porcptap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order Receipt</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>System Transaction Object Details</relationshipLabel>
        <relationshipName>sydatads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_porcptapids__c</fullName>
        <label>sydatad_porcptapids (Internal Use)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_sormadmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When processing an RMA via SYDATA for a Kit that has Lot or Serial Controlled components, this field carries the component link for this Transaction Object detail</inlineHelpText>
        <label>RMA Component</label>
        <referenceTo>rstk__sormadmd__c</referenceTo>
        <relationshipLabel>System Transaction Object Details</relationshipLabel>
        <relationshipName>sydatads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_srlnos__c</fullName>
        <inlineHelpText>When processing an RMA via SYDATA for a Kit that has Serial Controlled components, this field contains the serial numbers for the specified component item.</inlineHelpText>
        <label>Serial Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_syacc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>GL Account (via Sub-Ledger)</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>System Transaction Object Details</relationshipLabel>
        <relationshipName>sydatads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_sydata__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>System Transaction Object</label>
        <referenceTo>rstk__sydata__c</referenceTo>
        <relationshipLabel>System Transaction Object Details</relationshipLabel>
        <relationshipName>sydatads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_sydim1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>sydatad_sydim1 (Internal Use)</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>System Transaction Object Details</relationshipLabel>
        <relationshipName>dim1sydatads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_sydim2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>sydatad_sydim2 (Internal Use)</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>System Transaction Object Details (Dimension 2)</relationshipLabel>
        <relationshipName>dim2sydatads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_sydim3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>sydatad_sydim3 (Internal Use)</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>System Transaction Object Details (Dimension 3)</relationshipLabel>
        <relationshipName>dim3sydatads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_syvatclass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VAT Class</description>
        <label>VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>System Transaction Object Details</relationshipLabel>
        <relationshipName>sydatad</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_taxexpense__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_type__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Detail Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PO Receipt</fullName>
                </value>
                <value>
                    <fullName>GL Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydatad_vataddedtoamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VAT added to Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_vatcode__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>VAT Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydatad_vatincludedinamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VAT Included in Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>System Transaction Object Detail</label>
    <listViews>
        <fullName>rstk__RS_SYDATA_PO_AP_Child</fullName>
        <columns>NAME</columns>
        <columns>rstk__sydatad_sydata__c</columns>
        <columns>rstk__sydatad_type__c</columns>
        <columns>rstk__sydatad_porcptap__c</columns>
        <columns>rstk__sydatad_desc__c</columns>
        <columns>rstk__sydatad_amount__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydatad_dim1__c</columns>
        <columns>rstk__sydatad_dim2__c</columns>
        <columns>rstk__sydatad_dim3__c</columns>
        <columns>rstk__sydatad_dim4__c</columns>
        <columns>rstk__sydatad_apentryprice__c</columns>
        <columns>rstk__sydatad_apentryqty__c</columns>
        <columns>rstk__sydatad_taxexpense__c</columns>
        <columns>rstk__sydatad_syacc__c</columns>
        <filterScope>Everything</filterScope>
        <label>SYDATA - PO-AP Child</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__SYDATA_PO_AP_Child</fullName>
        <columns>NAME</columns>
        <columns>rstk__sydatad_sydata__c</columns>
        <columns>rstk__sydatad_type__c</columns>
        <columns>rstk__sydatad_porcptap__c</columns>
        <columns>rstk__sydatad_desc__c</columns>
        <columns>rstk__sydatad_amount__c</columns>
        <columns>rstk__sydatad_dim1__c</columns>
        <columns>rstk__sydatad_dim2__c</columns>
        <columns>rstk__sydatad_dim3__c</columns>
        <columns>rstk__sydatad_dim4__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydatad_apentryprice__c</columns>
        <columns>rstk__sydatad_apentryqty__c</columns>
        <columns>rstk__sydatad_taxexpense__c</columns>
        <columns>rstk__sydatad_syacc__c</columns>
        <filterScope>Everything</filterScope>
        <label>SYDATA - PO-AP Child</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__SYDATA_PO_AP_Child_Select</fullName>
        <columns>NAME</columns>
        <columns>rstk__sydatad_sydata__c</columns>
        <columns>rstk__sydatad_type__c</columns>
        <columns>rstk__sydatad_porcptap__c</columns>
        <columns>rstk__sydatad_desc__c</columns>
        <columns>rstk__sydatad_amount__c</columns>
        <columns>rstk__sydatad_dim1__c</columns>
        <columns>rstk__sydatad_dim2__c</columns>
        <columns>rstk__sydatad_dim3__c</columns>
        <columns>rstk__sydatad_dim4__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydatad_apentryprice__c</columns>
        <columns>rstk__sydatad_apentryqty__c</columns>
        <columns>rstk__sydatad_taxexpense__c</columns>
        <columns>rstk__sydatad_syacc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sydatad_sydata__c</field>
            <operation>equals</operation>
            <value>1489676246340091798</value>
        </filters>
        <label>SYDATA - PO-AP Child - Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__SYDATA_PO_AP_Child_Working</fullName>
        <columns>NAME</columns>
        <columns>rstk__sydatad_sydata__c</columns>
        <columns>rstk__sydatad_type__c</columns>
        <columns>rstk__sydatad_porcptap__c</columns>
        <columns>rstk__sydatad_desc__c</columns>
        <columns>rstk__sydatad_amount__c</columns>
        <columns>rstk__sydatad_dim1__c</columns>
        <columns>rstk__sydatad_dim2__c</columns>
        <columns>rstk__sydatad_dim3__c</columns>
        <columns>rstk__sydatad_dim4__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydatad_apentryprice__c</columns>
        <columns>rstk__sydatad_apentryqty__c</columns>
        <columns>rstk__sydatad_taxexpense__c</columns>
        <columns>rstk__sydatad_syacc__c</columns>
        <filterScope>Everything</filterScope>
        <label>SYDATA - PO-AP Child - Working</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Transaction Object Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__GL_Account_company_must_match_PO_cmpany</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(rstk__sydatad_type__c, &apos;GL Entry&apos;), ISPICKVAL(rstk__sydatad_sydata__r.rstk__sydata_txntype__c, &apos;PO AP Match Using Detail&apos;), (rstk__sydatad_syacc__r.rstk__syacc_div__r.rstk__sydiv_cmpno__c != rstk__sydatad_sydata__r.rstk__sydata_pohdr__r.rstk__pohdr_div__r.rstk__sydiv_cmpno__c))</errorConditionFormula>
        <errorDisplayField>rstk__sydatad_apentryprice__c</errorDisplayField>
        <errorMessage>GL Account company must match the Purchase Order Header company</errorMessage>
    </validationRules>
</CustomObject>